anvil-liquid-derive/tests/compile_fail/invalid_parser.stderr
error: couldn't read `$DIR/tests/compile_fail/test.txt`: No such file or directory (os error 2)
 --> tests/compile_fail/invalid_parser.rs
  |
  | #[derive(Serialize, Template)]
  |                     ^^^^^^^^
  |
  = note: this error originates in the macro `include_str` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
 --> tests/compile_fail/invalid_parser.rs
  |
  | #[derive(Serialize, Template)]
  |                     ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you must specify a concrete type for this numeric value, like `i32`
  |
8 | #[template(path = "test.txt", parser = 123_i32)]  // Using a number instead of an identifier
  |                                           ++++
